@@ -1,4 +1,5 @@
-#!/usr/bin/env python
+#!@PYTHON@
+#####!/usr/bin/env python
 #------------------------------
 
 import os
